# katagami

./: .gitignore  AGENTS.md  AGENT_INTEGRATION.md  APP.md  CLAUDE.md  DEPLOYMENT.md  GENESIS_UPDATE_MARKER.md  README.md  app.toml
.progress/: 001_20260610_riso-ui-redesign.md  002_20260704_agent-front-door.md
.proofs/: 001_phase1_entity_model.md  002_phase3_quality_evolution.md  003_phase5_agent_integration.md  005_quality_review_fail_fast_boundary.md  006_temper_native_curation_orchestration.md  023-curation-finalizer-liveness.md  024-curation-build-session-step-metrics.md  024-lineage-display-normalization.md  2026-06-18-ready-file-invariant-live-e2e.md  perf-036-static-doc-references-local.md
adrs/: 0001-contract-gated-curation-repair-loop.md  002-artstyle-visual-finalizer.md
agent-kit/: BAKEOFF.md  CONTRACT.md  METRICS-CONTRACT.md  README.md  SKILL.md
cli/: package-lock.json  package.json  tsconfig.json
docs/: temper-designlanguage-invariant-case-study.md
grok-4.3_2026-06-23_0011/: DESIGN.md  KATAGAMI.md  components.md  dashboard.html  embodiment.html  landing.html  preview-shots.json  run.json
katagami-commons/: APP.md  app.toml
katagami-curation/: APP.md  Makefile  app.toml
katagami-curation/wasm/finalize_spawned_session/: Cargo.toml  finalize_spawned_session.wasm
katagami-curation/wasm/finalize_spawned_session/src/: facets.rs  lib.rs  style_background_v1.json  taste_doc.rs
knowledge/: feedback-log.md  (+1 more)
wasm/finalize_spawned_session/: Cargo.toml  finalize_spawned_session.wasm
wasm/finalize_spawned_session/src/: facets.rs  lib.rs
(+934 files in other folders)
