[package]
name = "finalize_spawned_session"
version = "0.1.0"
edition = "2021"

[lib]
# rlib in addition to cdylib so `cargo test` can link the host-target test
# harness; the shipped artifact is still the cdylib .wasm from build.sh.
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
temper-wasm-sdk = { git = "https://github.com/nerdsane/temper.git", branch = "main" }
serde_json = "1"
regex-lite = "0.1"
